12) kernel: fastpaths: fastnat switch use cb[43] for deny flag (more fast and safe).<br>
13) kernel: fastpaths: optimize skip nat offload logic.<br>
14) kernel: ralink_raeth: add support GRO offload.<br>
15) kernel: ralink_raeth: fix potential deadlock on unregister second interface.<br>
16) kernel: ralink_raeth: fix reuse dirty TX descriptor.<br>
17) kernel: mips: allow optimized inliming.<br>
18) kernel: inet: sanitize inet{,6} protocol demux.<br>
19) kernel: net: make skb->skb_iif always track skb->dev.<br>
20) kernel: net: remove protocol from struct dst_ops.<br>
21) kernel: net: ipv6: make unsolicited report intervals configurable for mld.<br>
22) kernel: net: ipv6: mld: fix v1/v2 switchback timeout to rfc3810, 9.12.<br>
23) kernel: net: ipv4: disallow non-namespace aware protocols to register only if namespaces enabled.<br>.
24) kernel: net: ipv4: raise tcp PMTU probe mss base size.<br>
25) kernel: net: ipv4: ip_check_defrag should not assume that skb_network_offset is zero.<br>
26) kernel: net: ipv4: use binary search to choose tcp PMTU probe_size.<br>
27) kernel: net: ipv4: create probe timer for tcp PMTU as per RFC4821.<br>
28) kernel: net: neigh: keep neighbour cache entries if number of them is small enough.<br>
29) kernel: net: neigh: optimize neighbor entry size calculation.<br>
30) kernel: net: neigh: no need to call lookup_neigh_parms in neigh_parms_alloc.<br>
31) kernel: net: neigh: disallow un-init_net to change thresh of neigh.<br>
32) kernel: net: netfilter: nf_conntrack: use RCU safe kfree for conntrack extensions.<br>
<br>
<br>
<b>TODO:</b><br>
1) port support l2tp/pptp hardware NAT offload (really needed??? in sdk very ugly code).<br>
2) full russian ui (need help community or employ the web developer).<br>
3) need add irqbalance in WebUI (in last stage of 7621 dev).<br>
4) need add dsvfs2 webui for managment online disk drives (as yandex disk and others).<br>
<br>
<br>
<br>