@@ -704,6 +704,7 @@
 30) kernel: net: neigh: no need to call lookup_neigh_parms in neigh_parms_alloc.<br>
 31) kernel: net: neigh: disallow un-init_net to change thresh of neigh.<br>
 32) kernel: net: netfilter: nf_conntrack: use RCU safe kfree for conntrack extensions.<br>
+33) kernel: net: netfilter: nf_conntrack: fix RCU race in nf_conntrack_find_get.<br>
 <br>
 <br>
 <b>TODO:</b><br>
